fix: change position of DM content to fixed and use visibility for switching pages

--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -135,7 +135,8 @@
   width: 100vw;
 
   .react-autoql-table {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 }
 
