--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -10,11 +10,9 @@
 .react-autoql-drawer .react-autoql-drawer-content-container {
   width: 100%;
   height: 100%;
-  display: flex;
   background: var(--react-autoql-background-color-primary);
   overflow: hidden;
   border-radius: 4px;
-  flex-direction: column;
 }
 
 .react-autoql-drawer .chat-header-container {
